tests/baselines/reference/contextualTyping41.errors.txt
tests/cases/compiler/contextualTyping41.ts(1,11): error TS2323: Type '() => string' is not comparable with type '{ (): number; (i: number): number; }'.
  Type 'string' is not comparable with type 'number'.


==== tests/cases/compiler/contextualTyping41.ts (1 errors) ====
    var foo = <{():number; (i:number):number; }> (function(){return "err";});
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2323: Type '() => string' is not comparable with type '{ (): number; (i: number): number; }'.
!!! error TS2323:   Type 'string' is not comparable with type 'number'.